@@ -1,6 +1,6 @@
-Date: 2013-01-26
+Date: 2013-02-02
 Package: CHNOSZ
-Version: 0.9-9.2
+Version: 0.9-9.3
 Title: Chemical Thermodynamics and Activity Diagrams
 Author: Jeffrey M. Dick
 Maintainer: Jeffrey M. Dick <jmdick@asu.edu>
